src/styles.css
.parent {
  display: grid;
  grid-template-columns: 300px repeat(2, 1fr);
  grid-template-rows: 40px 1fr;
  grid-column-gap: 5px;
  grid-row-gap: 0px;
}

.settings-container {
  grid-area: 2 / 1 / 3 / 2;
}
.input-container {
  grid-area: 2 / 2 / 3 / 3;
}
.output-container {
  grid-area: 2 / 3 / 3 / 4;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}
.header-container {
  grid-area: 1 / 1 / 2 / 4;
}

/*
rusty red #984b43
gunmetal #233237
navy blue #18121e
warm yellow: #eac67a
*/

body {
  background-color: #233237;
  color: #eac67a;
  font-family: "Lucida Console", Monaco, monospace;
  font-size: 12pt;
}


a.styled,
a.styled:hover,
a.styled:visited {
  color: #eac67a;
  text-decoration: underline;
}

header {
  font-size: 16pt;
  vertical-align: middle;
  border-bottom: 2px solid #984b43;
}

header a,
a:visited,
a:hover {
  text-decoration: none;
}

.container-label {
  font-size: larger;
  font-weight: bold;
  border-bottom: 2px solid #984b43;
}

.container {
  border: 1px solid #233237;
  height: calc(100vh - 40px);
}

#input {
  height: calc(100vh - 40px);
  width: 99%;
}

#output {
  height: calc(50vh - 25px);
  width: 99%;
  background-color: #eaeaea;
}

#rendered-output {
  height: calc(50vh - 25px);
  width: 100%;
  background-color: #eaeaea;
  color: black;
  overflow-x:scroll ; overflow-y: scroll;
  white-space: break-spaces;
}

.setting {
  border-bottom: 2px solid #984b43;
  margin: 10px 1px;
}

span.highlight {
    background-color: yellow;
}

div.about {
  margin-left: 10px;
  position: fixed;
  left: 0px;
  bottom: 0px;

  width: 290px;
}

.hidden-select-setting {
  display: none;
}

.setting.selected {
  font-weight: bolder;
}

.setting.selected label.toggle-on-click:after {
  content: " ✅";
}

.setting.zero label.toggle-on-click:after {
  content: " 0️⃣";
}

.setting.one label.toggle-on-click:after {
  content: " 1️⃣";
}

.setting.two label.toggle-on-click:after {
  content: " 2️⃣";
}

.setting.three label.toggle-on-click:after {
  content: " 3️⃣";
}

.setting.all label.toggle-on-click:after {
  content: " all";
}

